--- a/md2multipart.cabal
+++ b/md2multipart.cabal
@@ -20,6 +20,8 @@ executable md2multipart
   main-is:             Md2MultiPart.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7,
+                       either-unwrap,
+                       pandoc
   -- hs-source-dirs:      
   default-language:    Haskell2010
