--- a/md2multipart.cabal
+++ b/md2multipart.cabal
@@ -24,3 +24,7 @@ executable md2multipart
                        pandoc
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+source-repository head
+  type:         git
+  location:     git@github.com:jdagilliland/md2multipart.git
